// (-- api-linter: core::0191::java-package=disabled
// (-- api-linter: core::0191::java-multiple-files=disabled
// (-- api-linter: core::0191::java-outer-classname=disabled
//     aip.dev/not-precedent: We need to do this because reasons. --)
syntax = "proto3";

package qclaogui.project.v1;

import "google/api/annotations.proto";
import "google/api/client.proto";
import "qclaogui/project/v1/room.proto";

option go_package = "github.com/qclaogui/gaip/genproto/project/apiv1/projectpb";

// A simple messaging service that implements chat rooms and profile posts.
//
// This messaging service showcases the features that API clients
// generated by gapic-generators implement.
service MessagingService {
  option (google.api.default_host) = "localhost:9095";

  // Creates a room.
  rpc CreateRoom(CreateRoomRequest) returns (Room) {
    option (google.api.http) = {
      post: "/v1/rooms"
      body: "*"
    };

    option (google.api.method_signature) = "room.display_name,room.description";
  }

  // Retrieves the Room with the given resource name.
  rpc GetRoom(GetRoomRequest) returns (Room) {
    option (google.api.http) = {get: "/v1/{name=rooms/*}"};
    option (google.api.method_signature) = "name";
  }
}
