syntax = "proto3";

package qclaogui.project.v1;

import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/qclaogui/gaip/genproto/project/apiv1/projectpb";

// A chat room.
message Room {
  option (google.api.resource) = {
    type: "project.qclaogui.com/Room"
    pattern: "rooms/{room}"
  };

  // The resource name of the chat room.
  string name = 1;

  // The human readable name of the chat room.
  string display_name = 2 [(google.api.field_behavior) = REQUIRED];

  // The description of the chat room.
  string description = 3;

  // The timestamp at which the user was created.
  google.protobuf.Timestamp create_time = 4 [(google.api.field_behavior) = OUTPUT_ONLY];

  // The latest timestamp at which the user was updated.
  google.protobuf.Timestamp update_time = 5 [(google.api.field_behavior) = OUTPUT_ONLY];
}

// The request message for CreateRoom method.
message CreateRoomRequest {
  // The room to create.
  Room room = 1;
}

// The request message for GetRoom method.
message GetRoomRequest {
  // The resource name of the requested room.
  string name = 1 [
    (google.api.resource_reference).type = "project.qclaogui.com/Room",
    (google.api.field_behavior) = REQUIRED
  ];
}

message UpdateRoomRequest {
  // The room to update.
  Room room = 1;

  // The field mask to determine which fields are to be updated. If empty, the
  // server will assume all fields are to be updated.
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteRoomRequest {
  // The resource name of the requested room.
  string name = 1 [
    (google.api.resource_reference).type = "project.qclaogui.com/Room",
    (google.api.field_behavior) = REQUIRED
  ];
}

message ListRoomsRequest {
  // The maximum number of rooms return. Server may return fewer rooms
  // than requested. If unspecified, server will pick an appropriate default.
  int32 page_size = 1;

  // The value of google.showcase.v1beta1.ListRoomsResponse.next_page_token
  // returned from the previous call to
  // `google.showcase.v1beta1.Messaging\ListRooms` method.
  string page_token = 2;
}

message ListRoomsResponse {
  // The list of rooms.
  repeated Room rooms = 1;

  // A token to retrieve next page of results.
  // Pass this value in ListRoomsRequest.page_token field in the subsequent
  // call to `google.showcase.v1beta1.Messaging\ListRooms` method to retrieve
  // the next page of results.
  string next_page_token = 2;
}
